Prevent vertical scrollbar.

--- a/clean.scss
+++ b/clean.scss
@@ -16,11 +16,11 @@
                 width: 100%;
                 height: 100%;
                 margin: 0;
-                padding-top: 120px;
         }
 
         #mv-tiles {
                 zoom: $scale_tiles;
+                margin-top: 80px;
         }
 
         div.mv-fav,
